<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="?attr/selectableItemBackground"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            app:cardCornerRadius="@dimen/_10sdp">

            <ImageView
                android:id="@+id/ivThumb"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/history"
                android:scaleType="centerCrop"
                android:src="@drawable/baseline_history_24" />
        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/_7sdp"
            android:layout_marginTop="@dimen/_7sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_34sdp"
                android:layout_height="@dimen/_34sdp"
                app:cardCornerRadius="@dimen/_17sdp">

                <ImageView
                    android:id="@+id/ivPhotograph"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/user"
                    android:src="@drawable/user" />
            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/tvQueryHistory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3sdp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/ivDownloadImage"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/download"
                android:src="@drawable/baseline_download_for_offline_24" />
        </LinearLayout>

    </LinearLayout>
</layout>